# upright

./: README.md
can_hw/: package.xml
can_hw/config/: actuator_coefficient.yaml
can_hw/src/: hardware_interface.cpp
diablo_hw/: CMakeLists.txt  diablo_hw_plugin.xml  package.xml
diablo_hw/config/: diablo_hw.yaml
diablo_hw/include/diablo_hw/: DiabloCtrl.h  DiabloHW.h  OSDKDDJM15.h  OSDKVehicle.h
diablo_hw/launch/: load_diablo_hw.launch
diablo_hw/src/: DiabloCtrl.cpp  DiabloHW.cpp  OSDKCRC.cpp  OSDKHAL.cpp  OSDKLog.cpp  OSDKMovement.cpp  OSDKPid.cpp  OSDKTelemetry.cpp  OSDKVehicle.cpp  main.cpp
diablo_hw/src/VulcanSerial/: SerialPort.cpp
diablo_sdk/: CMakeLists.txt  package.xml
diablo_sdk/config/: diablo_hw.yaml
diablo_sdk/include/diablo_sdk/: DiabloCtrl.h  OSDKCRC.h  OSDKHAL.h  OSDKMovement.h  OSDKPid.h  OSDKTelemetry.h  OnboardSDKUartProtocol.h
diablo_sdk/launch/: load_diablo_hw.launch
diablo_sdk/src/: DiabloCtrl.cpp  OSDKCRC.cpp  OSDKHAL.cpp  OSDKLog.cpp  OSDKMovement.cpp  OSDKPid.cpp  OSDKTelemetry.cpp  OSDKVehicle.cpp  mian.cpp
diablo_sdk/src/VulcanSerial/: SerialPort.cpp
generally_hw/: CMakeLists.txt  package.xml
generally_hw/include/generally_hw/: GenerallyHW.h  GenerallyHWLoop.h
generally_hw/src/: GenerallyHW.cpp  GenerallyHWLoop.cpp
mm_assets/: CMakeLists.txt  package.xml
mm_assets/config/OCS2_mobile_manipulator/: hw.yaml
mm_assets/config/ddt_mm/: controllers.yaml  robot_def.yaml  task.info
mm_assets/config/ocs2_mm/: balance_adam.yaml  task.info
mm_assets/launch/: fake_mobile_manipulator_ddt.launch  fake_ocs2_mm.launch  load_all.launch  load_controller.launch  load_hw.launch  rviz_target.launch
mm_assets/launch/ddt_mm/: fake_ddt_mm.launch  load_ddt_all.launch  load_ddt_controller.launch  load_ddt_hw.launch
mm_assets/launch/include/: mobile_manipulator.launch  visualize.launch
mm_assets/launch/ocs2_mm/: load_ocs2_all.launch  load_ocs2_controller.launch
mm_assets/rviz/: mobile_manipulator.rviz
mobile_manipulator_assets/: CMakeLists.txt  package.xml
mobile_manipulator_assets/config/: balance.yaml  task.info
mobile_manipulator_assets/config/OCS2_mobile_manipulator/: hw.yaml  task.info
mobile_manipulator_assets/description/urdf/: ridgeback_ur5.urdf
mobile_manipulator_assets/launch/: fake_mobile_manipulator_ddt.launch  load_all.launch  load_controller.launch  load_hw.launch  mobile_manipulator_ddt.launch  rviz_target.launch
mobile_manipulator_assets/launch/include/: mobile_manipulator.launch  visualize.launch
mobile_manipulator_assets/rviz/: mobile_manipulator.rviz
qz_hw/: CMakeLists.txt  package.xml
qz_hw/devel_store/: airbot_play_node  gripper_force_fb  headware_setup
qz_hw/examples/: airbot_play_node.cpp  gripper_force_fb.cpp  headware_setup.cpp
qz_hw/launch/: load_qz_hw.launch
qz_hw/msg/: hybrid_force.msg
qz_hw/scripts/: airbot_play_zero_gravity.py
qz_hw/src/airbot/: board_driver.cpp  dm_motor_driver.cpp  motor_driver.cpp  od_motor_driver.cpp
qz_hw/src/app/: airbot_play.cpp  robot.cpp
qz_hw/src/drivers/: can.cpp  imu_c_borad.cpp  mit_motor.cpp
qz_hw/src/libcan/: CANAdapter.cpp  CANFrameParser.cpp  SocketCAN.cpp
rm_demo/: CMakeLists.txt  package.xml
rm_demo/include/rm_demo/: rmInterface.h
rm_demo/src/: rmInterface.cpp
rm_hw/: CMakeLists.txt  package.xml
rm_hw/include/rm_hw/: rmInterface.h
rm_hw/src/: rmInterface.cpp
rm_hw/test/: demo.cpp  testPS5Joy.cpp
swingboy_hw/arm_common/: CMakeLists.txt  package.xml
swingboy_hw/arm_pinocchio_interface/: CMakeLists.txt  package.xml
swingboy_hw/arm_pinocchio_interface/cmake/: pinocchio_config.cmake
swingboy_hw/arm_pinocchio_interface/src/: EndEffectorInterface.cpp  PinocchioInterface.cpp  urdf.cpp
swingboy_hw/can_hw/: CMakeLists.txt  can_hw_plugins.xml  package.xml
swingboy_hw/can_hw/config/: actuator_coefficient.yaml
swingboy_hw/can_hw/src/: hardware_interface.cpp
swingboy_hw/swingboy_hw/: CMakeLists.txt  package.xml
upright_asset/: CMakeLists.txt  package.xml
upright_asset/config/: controllers.yaml  hw.yaml  task.info
upright_asset/description/launch/: empty_world.launch  gazebo_diablo.launch  gazebo_manipulator.launch  view_diablo.launch  view_manipulator.launch  view_wlm_manipulator.launch
upright_asset/description/rviz/: manipulator_view.rviz  wlm_view.rviz
upright_asset/launch/: load_all.launch  load_controller.launch  load_hw.launch  rviz_target.launch
upright_asset/launch/fake/: fake.launch  mobile_manipulator.launch  visualize.launch
upright_asset/rviz/: manipulator.rviz  mobile_manipulator.rviz
upright_common/: CMakeLists.txt  package.xml
upright_common/include/upright_common/: math_utilities.h  ori_tool.h  ros_utilities.h  tf_rt_broadcaster.h
upright_common/src/: ori_tool.cpp  tf_rt_broadcaster.cpp
upright_common/src/filters/: lp_filter.cpp
upright_control/: CMakeLists.txt  package.xml
upright_control/config/: balance_example.yaml  config_explain.md  interface_example.info  task.info
upright_control/include/upright_control/: InertialAlignment.h  MobileManipulatorInterface.h
upright_control/src/: InertialAlignment.cpp  MobileManipulatorInterface.cpp
upright_control/src/constraint/: BoundedBalancingConstraints.cpp  EndEffectorConstraint.cpp
upright_control/test/: TestBalanceConfig.cpp  TestConfig.cpp
upright_control/test/config/: test_balance.yaml  (+1 more)
upright_control_ros/: CMakeLists.txt  diablo_qz_controller_plugins.xml  mobile_manipulator_controller_plugins.xml  package.xml
upright_control_ros/src/: DDTMobileManipulatorTarget.cpp  DiabloQzController.cpp  DummyManipulatorNode.cpp  MobileManipulatorController.cpp  MobileManipulatorMpcNode.cpp  MobileManipulatorVisualization.cpp
upright_controller/: CMakeLists.txt  package.xml  upright_controller_plugins.xml
upright_controller/src/: UprightController.cpp
upright_hw/: CMakeLists.txt  package.xml
upright_hw/src/: UprightHW.cpp  upright_hw.cpp
webots_deliver/: CMakeLists.txt  package.xml
webots_deliver/config/: robot_def.yaml
webots_deliver/launch/: load_webots_deliver.launch
webots_deliver/src/: webots_deliver.cpp
(+198 files in other folders)
