<?xml version="1.0"?>
<package format="2">
    <name>diablo_hw</name>
    <version>0.0.0</version>
    <description>The diablo_hw package</description>

    <maintainer email="lsy@todo.todo">lsy</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>ocs2_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>pluginlib</depend>
    <depend>hardware_interface</depend>

    <export>
        <hardware_interface plugin="${prefix}/diablo_hw_plugin.xml"/>
    </export>
</package>
