<?xml version="1.0"?>
<package format="2">
  <name>generally_hw</name>
  <version>0.0.0</version>
  <description>The generally_hw package</description>

  <maintainer email="lsy@todo.todo">lsy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_clang_tools</build_depend>
  <depend>roscpp</depend>
  <depend>legged_common</depend>
  <depend>controller_manager</depend>
  <depend>urdf</depend>
  <depend>hardware_interface</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
