<?xml version="1.0"?>
<package format="2">
  <name>mobile_manipulator_assets</name>
  <version>0.0.0</version>
  <description>The ur5_assets package</description>

  <maintainer email="lsy@todo.todo">lsy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>ocs2_mobile_manipulator</depend>
  <depend>ocs2_mobile_manipulator_ros</depend>
  <depend>urdf</depend>
  <depend>rviz</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>