<package>

    <name>upright_asset</name>
    <version>0.3.0</version>
    <description>
        the ddt_manipulator assets
    </description>
    <author email="2028238109@qq.com">4yang</author>
    <maintainer email="2028238109@qq.com">4yang</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
