<?xml version="1.0"?>
<package format="2">
    <name>upright_common</name>
    <version>0.0.0</version>
    <description>The upright_common package</description>
    <maintainer email="lsy@todo.todo">lsy</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>

    <depend>tf</depend>
    <depend>geometry_msgs</depend>
    <depend>realtime_tools</depend>
    <depend>imu_complementary_filter</depend>
    <depend>imu_filter_madgwick</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>control_msgs</depend>
    <depend>controller_manager_msgs</depend>
    <depend>upright_msgs</depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
