<?xml version="1.0"?>
<package format="2">
    <name>upright_hw</name>
    <version>0.0.0</version>
    <description>The upright_hw package</description>

    <maintainer email="lsy@todo.todo">lsy</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>generally_hw</depend>
    <depend>can_hw</depend>
    <depend>ocs2_msgs</depend>
    <depend>visualization_msgs</depend>
</package>
