<?xml version="1.0"?>
<package format="2">
  <name>arm_pinocchio_interface</name>
  <version>0.0.0</version>
  <description>The arm_pinocchio_interface package</description>

  <maintainer email="liusiyang.cn@gmail.com">Siyang Liu</maintainer>
  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">Siyang Liu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>arm_common</depend>
  <depend>pinocchio</depend>

</package>
