<?xml version="1.0"?>
<package format="2">
    <name>can_hw</name>
    <version>0.0.0</version>
    <description>use for abstracting hardware</description>
    <maintainer email="liusiyang.cn@gmail.com">4yang</maintainer>

    <license>BSD</license>
    <author email="liusiyang.cn@gmail.com">4yang</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>

    <depend>arm_common</depend>
    <depend>arm_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>transmission_interface</depend>
    <depend>joint_limits_interface</depend>
    <depend>controller_interface</depend>
    <depend>controller_manager</depend>
    <depend>urdf</depend>
    <depend>realtime_tools</depend>
    <depend>pluginlib</depend>

    <export>
        <hardware_interface plugin="${prefix}/can_hw_plugins.xml"/>
    </export>
</package>