<?xml version="1.0"?>
<package format="2">
    <name>swingboy_hw</name>
    <version>0.0.0</version>
    <description>Meta package that contains package.</description>
    <maintainer email="liusiyang.cn@gmail.com">Siyang Liu</maintainer>

    <license>BSD</license>

    <author email="liusiyang.cn@gmail.com">Siyang Liu</author>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>can_hw</exec_depend>
    <exec_depend>arm_common</exec_depend>
    <exec_depend>arm_msgs</exec_depend>

    <export>
        <metapackage/>
    </export>
</package>
